fix: Resolve custom scrollbar bug

--- a/Animotion/src/index.css
+++ b/Animotion/src/index.css
@@ -14,9 +14,11 @@
 
 
 body {
+  background-color: rgb(255, 255, 255); 
+  margin: 0rem;
   --sb-track-color: #232323;
   --sb-thumb-color: #86ff84;
-  --sb-size: 14px;
+  --sb-size: .7rem;
 }
 
 body::-webkit-scrollbar {
@@ -25,7 +27,6 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
   background: var(--sb-track-color);
-  border-radius: 20px;
 }
 
 body::-webkit-scrollbar-thumb {
